--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,14 @@
 {
     "compilerOptions": {
-        "module": "es2022",
+        "module": "ESNext",
         "target": "es2017",
-        "downlevelIteration": true,
         "esModuleInterop": true,
         "noImplicitAny": true,
         "moduleResolution": "node",
         "sourceMap": true,
         "outDir": "dist",
         "baseUrl": ".",
-        "paths": {
-            "*": [
-                "node_modules/*"
-            ]
-        },
-        "lib": ["dom", "es6"],
+        "lib": ["dom", "es2017"],
     },
-    "include": [
-        "*.ts"
-, "reportScript.js"    ]
+    "include": ["**/*.ts"]
 }
