--- a/package.json
+++ b/package.json
@@ -1,26 +1,18 @@
 {
-  "name": "pw-similarity",
-  "version": "1.0.0",
-  "description": "Node.js package for Playwright test similarity analysis.",
-  "main": "dist/calculate-similarity.js",
-  "bin": {
-    "pw-similarity": "./cli.js"
-  },
-  "scripts": {
-    "build": "tsc",
-    "test": "node --loader ts-node/esm calculate-similarity.ts"
-  },
-  "files": [
-    "dist/"
-  ],  
-  "author": "Nikolay Prosenikov",
-  "license": "ISC",
-  "dependencies": {
-    "openai": "^4.24.1"
-  },
-  "devDependencies": {
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.3"
-  },
-  "type": "module"
+	"name": "test-comparison-project",
+	"version": "1.0.0",
+	"description": "A project to compare and analyze tests",
+	"main": "dist/main.js",
+	"scripts": {
+		"build": "tsc",
+		"start": "node dist/index.js",
+		"dev": "ts-node src/index.ts"
+	},
+	"dependencies": {
+		"@types/node": "^14.14.31"
+	},
+	"devDependencies": {
+		"typescript": "^4.2.3",
+		"ts-node": "^9.1.1"
+	}
 }
