--- a/package.json
+++ b/package.json
@@ -1,18 +1,45 @@
 {
-	"name": "test-comparison-project",
+	"name": "e2e-test-comparison",
 	"version": "1.0.0",
-	"description": "A project to compare and analyze tests",
-	"main": "dist/main.js",
+	"description": "A tool to compare and analyze e2e tests",
+	"main": "dist/index.js",
+	"types": "dist/index.d.ts",
+	"bin": {
+		"e2e-test-comparison": "./bin/e2e-test-comparison.js"
+	},
 	"scripts": {
 		"build": "tsc",
 		"start": "node dist/index.js",
-		"dev": "ts-node src/index.ts"
+		"dev": "ts-node src/index.ts",
+		"prepublishOnly": "npm run build",
+		"lint": "eslint . --ext .ts",
+		"test": "jest"
 	},
+	"keywords": [
+		"e2e",
+		"test",
+		"comparison",
+		"analysis"
+	],
+	"author": "Your Name",
+	"license": "MIT",
 	"dependencies": {
-		"@types/node": "^14.14.31"
+		"commander": "^8.3.0",
+		"openai": "^4.61.0"
 	},
 	"devDependencies": {
-		"typescript": "^4.2.3",
-		"ts-node": "^9.1.1"
-	}
+		"@types/jest": "^27.0.3",
+		"@types/node": "^22.5.5",
+		"@typescript-eslint/eslint-plugin": "^5.5.0",
+		"@typescript-eslint/parser": "^5.5.0",
+		"eslint": "^8.4.0",
+		"jest": "^27.4.3",
+		"ts-jest": "^27.1.1",
+		"ts-node": "^9.1.1",
+		"typescript": "^4.2.3"
+	},
+	"files": [
+		"dist",
+		"bin"
+	]
 }
